<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.keerthana.appportfolio.MainActivity"
    android:background="@color/mainbg"
    android:padding="15dp">
    <Button
        android:text="@string/project1"
        android:id="@+id/btnproject1"
        style = "@style/BtnMain"
        android:onClick="launch1" />
    <Button
        android:text="@string/project2"
        android:id="@+id/btnproject2"
        style="@style/BtnMain"
        android:onClick="launch2" />
    <Button
        android:text="@string/project3"
        android:id="@+id/btnproject3"
        style="@style/BtnMain"
        android:onClick="launch3" />
    <Button
        android:text="@string/project4"
        android:id="@+id/btnproject4"
        style="@style/BtnMain"
        android:onClick="launch4" />
    <Button
        android:text="@string/project5"
        android:id="@+id/btnproject5"
        style="@style/BtnMain"
        android:onClick="launch5" />
    <Button
        android:text="@string/capstone"
        android:id="@+id/btncapstone"
        style="@style/BtnMain"
        android:background="@color/capstonebg"
        android:textColor="@color/capstonetxt"
        android:textStyle="bold"
        android:onClick="launchc" />
</LinearLayout>
